tests/resource/valid/definition/assign_tuples.mamba
def a := (2, 3)
def b: (Int, Int) := (3, 5)

def c: (Int, Int, Str) := (3, 4, "Hello")
