tests/resource/invalid/type/definition/tuple_modify_inner_mut.mamba
class MyClass
    def my_field: Int := 10


def (a, fin b) := (MyClass(), 10)
b := 30
